prevent side shift when browser add scrollbar

--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ html {
   font-family: NunitoSans, sans-serif;
 }
 
+body {
+  overflow: scroll;
+}
+
 .overlay {
   position: fixed;
   left: 0;
